Do not focus the tag search line edit in the show event

This is a bad idea, since that will take focus away from the canvas
every time the krita window is shown anew.

BUG:404131