libs/widgets/KoResourceItemChooser.cpp
@@ -563,13 +563,6 @@ void KoResourceItemChooser::showEvent(QShowEvent *event)
 {
     QWidget::showEvent(event);
     updateView();
-
-    /* Give the search field focus onShowEvent to allow for
-     * faster preset filtering... */
-    if( d->tagManager ) {
-        d->tagManager->searchField()->setFocus(Qt::FocusReason::OtherFocusReason);
-        d->tagManager->searchField()->selectAll();
-    }
 }
 
 void KoResourceItemChooser::updateView()
