libs/widgets/KoResourceTaggingManager.h
@@ -58,10 +58,9 @@ public:
     bool allowTagModification();
     KoTagFilterWidget* tagFilterWidget();
     KoTagChooserWidget* tagChooserWidget();
-    class QLineEdit* searchField();
 
 Q_SIGNALS:
-    void updateView();
+    void    updateView();
     
 private Q_SLOTS:
 
